--- a/Neo/FrmPrm.resx
+++ b/Neo/FrmPrm.resx
@@ -648,20 +648,20 @@
   <data name="btnSalir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALsSURBVDhPdZILSFNhGIYPRUXEhi1L23GcuSma6WYXK7RY
-        RAbOZoVgF7tqlgZapGSBkFEsnKaoM1RMIw2H5AUTSgvMtIstnUybmlo6xybrtnmmrYu9ndkgauyBFz74
-        3//h4+cn3BFTb3wbfVfzNbK0mw5TPKXDrrXQ4oxGOqykm5ZWjdH76kdtu1UTRmfdlegas4mkQsGnhNh5
-        KA2J8kpk1T5CXscYyvqtaPvwC/HVeruz7squOwYDm+WN/WVdaJwGbo0Dtw1A+YgdJQM0qt/NQFo1Sjvr
-        roSoZowcDg9ROa0oHJ7DledmXHn2NwV9FkYw+K8AxIZFPwhizDEHqmZ0nh4+kGQ345rWjvR2IzKemOaT
-        3m5CtvojpGXdrhtYtkfgZ4RY61Wg71rmLUD4JRUyX80g+YEeKQ8n53PmoQGZnWbsVDCCFxLJnPVsEqyp
-        ibCcOwXrsShAkYiW03IQC1kIvFCH1K5pHGkax9HmcSS06HGiWY/ohgmEyV/SxMfMePvXpEjMnpZiNiUG
-        9OEdmN5KAZePojWQAj+5BrI2C+Ia3uFA43tE1Y5gU/kbrKsawcarnYwgPt5uE62ELVwA22ZfTG8R4kt4
-        ALDVF5CsRWRcDtK137GtXAtRqQ5rivqxtngAIRVvIc5ooYn2zaK5qSAepoKF+CAS4EuoH7Cej2/+JMTM
-        uy4+Wwer2QDvjMfwK9YhoEiLgEIt/MuGEOwQ/M+w5yp89mBPBR2sMRBcf7Bj88EvGgKVp4GwoA8CR/I1
-        4N8cBHX+PwEIYsFzFsvsmDkXe3rJ5Z5YFquAoNLICHpB3dD8CTPzlDpQqffdfySvtA4Td/kKLN0jh2+5
-        ATxFD3i5mj9R9IJUDsE3ud7mrLvCPt40u9qDg6XSbPArJuGTo4YPI5lPzmv4MBvwTt5jlnYD96BKxmWx
-        ZEtkBZ+oivcgmUskc9kRrlytJpW6itUJqr3OunuWyG4N85RDE9zr6iwy9/UOr+savvOIgSB+A4TGywlt
-        UqvDAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALqSURBVDhPdZIJSJNhHMY/ihKJDTNL3cE3p6J5dyzDDEM0
+        cDYrBDssK+2wwIyULBBSkonTFI+iiWmU0ZA8sEFqgZkm2dTJtKWZ1xpTpqXbN3Ud9vRNB5HDHzzwh/d5
+        f/x5eYm1iKnVfY5+qlyMfNBFCSRvKUGOnApMr6cE97ooYdUIdbT2i+mQbEJnrdsSXa2fZJNB4JHuiDh5
+        FUniSmQ+e4WCthFI+w1omf6D+Ccas7Vuy8HHWi2T4YJj0g7UG4GH48AjLVA+bMa9AQpPRuchrPpCWeu2
+        +MvmdY6OXETlNaN4aAnZnXpkv/uXor45WvDpfwGIXRt+EcSIZfaWzaudHDgIy2pEjsqMtFYd0t9MLiet
+        dRJZihkIpV22G8wd2Iff+wJVzkWajk0ufITckiHjwzySX2pwuenrcq40aZHRrkeEhBZ0hoUtGVIvwJCS
+        hLlrF2E4EwVIkiC/JAaxngHvGzVI6TDidMM4EhrHkSjX4FyjBtF1ExCI31PETEa8efFCJBYuCbFwOQbU
+        qXAYQ0ngdgKavUnwkqshaplDXN0ojtePIerZMPaUf8SOqmHsvtNOC+LjzaaArTCF8GEKdoNxrztmQ7yA
+        UDcgzBeRcXlIU/3E/nIVAh6osb2kH76lA/Cv+IzAdDlFtAYHLE35cDHl547pAD5mgzyAnTz88GQjkH7X
+        jak1MOi1cEl/DY9SNbxKVPAqVsFTOgg/i2A1Q07b8N2BOeVzolpLsDzBjC0Er2QQZIES7kV94FtSqATv
+        /ieQ11cJQBDrOhkMvWV2vNnTy97shE2xEvArdbSgF+Rd5UromVumBpnyYu2P5Hy1bZK1eQvsD4vhVq4F
+        V9IDbr5yJZJesMsG4ZZca7LWbWGebVhwdXCEvTALvIqv4OQpwKEly8nrBofegHv+Ob30GrBOyEQsBkNk
+        Jyr6RlaMgU1fYtOXLWGJFQp2mbrCNVF2xFpfGzvRwyFu2eAEK1eRyc7vDnfOVfKsRzQE8ReCPcsI+XYV
+        EwAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
